css/style.css
/* 
html5doctor.com Reset Stylesheet
v1.6.1
Last Updated: 2010-09-17
Author: Richard Clark - http://richclarkdesign.com 
Twitter: @rich_clark
*/

html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
margin:0;
padding:0;
border:0;
outline:0;
vertical-align:baseline;
background:transparent;
}


footer{
  color:#ccc;
}

body {
line-height:1;
}

article,aside,details,figcaption,figure,
footer,header,hgroup,menu,nav,section { 
display:block;
}

nav{
  position: fixed;
}

nav ul {
list-style:none;
}

blockquote, q {
quotes:none;
}

blockquote:before, blockquote:after,
q:before, q:after {
content:'';
content:none;
}

a {
margin:0;
padding:0;
font-size:100%;
vertical-align:baseline;
background:transparent;
}

/* change colours to suit your needs */
ins {
background-color:#ff9;
color:#000;
text-decoration:none;
}

/* change colours to suit your needs */
mark {
background-color:#ff9;
color:#000; 
font-style:italic;
font-weight:bold;
}

del {
text-decoration: line-through;
}

abbr[title], dfn[title] {
border-bottom:1px dotted;
cursor:help;
}

table {
border-collapse:collapse;
border-spacing:0;
}

/* change border colour to suit your needs */
hr {
display:block;
height:1px;
border:0; 
border-top:1px solid #cccccc;
margin:1em 0;
padding:0;
}

input, select {
vertical-align:middle;
}

/*-----------------------------------------Main code----------------------------------------------------*/
.navbar-nav > li > .dropdown-menu > .dropdown-item:active { background-color: #000005 !important; }
@media screen and (max-width: 580px){
  .hide-on-small{
    display: none;
  }

  #showcase{
    height: 50vh;
  }

  #showcase .container{
    margin-top: 15vh;
  }

  #showcase h1{
    font-size: 3rem;
  }

  #showcase h2{
    font-size: 1.5rem;
  }
}

@font-face{
  font-family: DancingScript;
  src:url(DancingScript-Bold.ttf);
}

.btn-file {
    position: relative;
    overflow: hidden;
}

    .btn-file input[type=file] {
        position: absolute;
        top: 0;
        right: 0;
        min-width: 100%;
        min-height: 100%;
        font-size: 100px;
        text-align: right;
        filter: alpha(opacity=0);
        opacity: 0;
        outline: none;
        background: white;
        cursor: inherit;
        display: block;
    }

.page-footer{
   width:100%;
}

.unselectable{
  font-family: DancingScript;
  -webkit-user-select:none;
  -khtml-user-select:none;
  -moz-user-select:none;
  -ms-user-select:none;
  -o-user-select:none;
  user-select:none;
}

.header-padding{
  padding-left: 10px;
}

/*CSS Variables*/
:root{
  --primary-color: #b90415;
  --primary-color-hover: #d3071b;
  --secondary-color: #103063;
  --secondary-color-hover: #143f85;
  --light-color: #f4f4f4;
}

body{
  background-color: #252529;
  color: #fff;
  margin: 0;
  line-height: 1.6;
  font-family: 'PT Sans', sans-serif;
}

.footer-copyright{
  background-color: #303136;
}

hr{
  border-color: #dc3545;
}

img{
  width: 100%;
}

.head-container{
  padding-top:15px;
  padding-bottom:15px;
}

#showcase{
  margin: 0;
  padding: 0;
  background: url('../images/showcase.jpg') no-repeat
  center/cover;
  width: 100%;
  height: 100vh;
  position: relative;
  overflow-y: hidden;
  color: #fff;
}

#showcase .container{
  margin-top: 25vh;
}

#showcase h1{
  font-size: 4rem;
  margin-bottom: 0;
}

#showcase h2{
  font-size: 2rem;
}

/*Section*/
.section{
  padding: 4rem 0;
}

.section-head{
  font-size: 2.5rem;
  margin: 0;
  margin-bottom: 20px; 
}

.section{
  font-size: 2rem;
}

/*font size small for sections*/

.sppartsection{
  font-size: 1rem; 
}

.biketemplatesec{
  font-size: 1rem;
}

.modsection{
    font-size: 1rem; 
}

.addressconsec{
    font-size: 1rem; 
}

.paymentsec{
  font-size: 1rem;
}

.orderconsec{
  font-size: 1rem;
}

.postadsection{
  font-size: 1rem;
}

.fontsec{
  font-size: 1rem; 
}

.order-method-div-top{
  text-align: left;
}

.cart-div-second{
  text-align: left;
}

.payment-method-div-third{
    text-align: left;
}

.order-number-div{
  text-align:left;
}

.orderconmain hr{
  border: 0;
  clear:both;
  display:block;
  width: 100%;               
  background-color:#dc3545;
  height: 1px;

}

.input-xs {
  height: 22px;
  padding: 2px 5px;
  font-size: 12px;
  line-height: 1.5; /* If Placeholder of the input is moved up, rem/modify this. */
  border-radius: 3px;
}

.row {
  display: flex;
}

.left {
  flex: 20%;
  border-right: 2px #343a40 solid;
}

.right {
  flex: 80%;
  padding-left: 10px;
}

.modright{
  flex: 50%;
  padding-left: 10px;
}

.modleft{
  flex: 50%;
}

.modleft1{
  flex: 33.3%
}

.modright1{
  flex: 33.3%
}

.modmiddle1{
  flex: 33.3%
}

.altleft{
  flex: 25%;
}

.altright{
  flex: 25%;
}

.orderconleft{
 flex: 50%;
}

.orderconright{
  flex: 50%;
}

.leftsparep{
  flex: 33.3%;
}

.middlesparep{
  flex: 33.3%; 
}

.rightsparep{
  flex: 33.3%;
}

.paymentleft{
  -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 748px;
    -ms-flex-preferred-size: 748px;
    flex-basis: 748px;
}

.paymentright{
    height: auto;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -webkit-perspective: 1000;
    perspective: 1000;
    width: 390px;
    margin-left: 30px;
    -webkit-flex-basis: 392px;
    -ms-flex-preferred-size: 392px;
    flex-basis: 392px;
}

.paymentmain{
  align-items: flex-start;
      display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
}

.paymentright .form-row p{
  text-align:right;
}

.payment-total-left{
  flex: 50%;
}
/* ... */

